@@ -1,84 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2022/04/19 11:07:18 tnn Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/jinja2/__init__.py
-${PYSITELIB}/jinja2/__init__.pyc
-${PYSITELIB}/jinja2/__init__.pyo
-${PYSITELIB}/jinja2/_compat.py
-${PYSITELIB}/jinja2/_compat.pyc
-${PYSITELIB}/jinja2/_compat.pyo
-${PYSITELIB}/jinja2/_identifier.py
-${PYSITELIB}/jinja2/_identifier.pyc
-${PYSITELIB}/jinja2/_identifier.pyo
-${PYSITELIB}/jinja2/asyncfilters.py
-${PYSITELIB}/jinja2/asyncsupport.py
-${PYSITELIB}/jinja2/bccache.py
-${PYSITELIB}/jinja2/bccache.pyc
-${PYSITELIB}/jinja2/bccache.pyo
-${PYSITELIB}/jinja2/compiler.py
-${PYSITELIB}/jinja2/compiler.pyc
-${PYSITELIB}/jinja2/compiler.pyo
-${PYSITELIB}/jinja2/constants.py
-${PYSITELIB}/jinja2/constants.pyc
-${PYSITELIB}/jinja2/constants.pyo
-${PYSITELIB}/jinja2/debug.py
-${PYSITELIB}/jinja2/debug.pyc
-${PYSITELIB}/jinja2/debug.pyo
-${PYSITELIB}/jinja2/defaults.py
-${PYSITELIB}/jinja2/defaults.pyc
-${PYSITELIB}/jinja2/defaults.pyo
-${PYSITELIB}/jinja2/environment.py
-${PYSITELIB}/jinja2/environment.pyc
-${PYSITELIB}/jinja2/environment.pyo
-${PYSITELIB}/jinja2/exceptions.py
-${PYSITELIB}/jinja2/exceptions.pyc
-${PYSITELIB}/jinja2/exceptions.pyo
-${PYSITELIB}/jinja2/ext.py
-${PYSITELIB}/jinja2/ext.pyc
-${PYSITELIB}/jinja2/ext.pyo
-${PYSITELIB}/jinja2/filters.py
-${PYSITELIB}/jinja2/filters.pyc
-${PYSITELIB}/jinja2/filters.pyo
-${PYSITELIB}/jinja2/idtracking.py
-${PYSITELIB}/jinja2/idtracking.pyc
-${PYSITELIB}/jinja2/idtracking.pyo
-${PYSITELIB}/jinja2/lexer.py
-${PYSITELIB}/jinja2/lexer.pyc
-${PYSITELIB}/jinja2/lexer.pyo
-${PYSITELIB}/jinja2/loaders.py
-${PYSITELIB}/jinja2/loaders.pyc
-${PYSITELIB}/jinja2/loaders.pyo
-${PYSITELIB}/jinja2/meta.py
-${PYSITELIB}/jinja2/meta.pyc
-${PYSITELIB}/jinja2/meta.pyo
-${PYSITELIB}/jinja2/nativetypes.py
-${PYSITELIB}/jinja2/nativetypes.pyc
-${PYSITELIB}/jinja2/nativetypes.pyo
-${PYSITELIB}/jinja2/nodes.py
-${PYSITELIB}/jinja2/nodes.pyc
-${PYSITELIB}/jinja2/nodes.pyo
-${PYSITELIB}/jinja2/optimizer.py
-${PYSITELIB}/jinja2/optimizer.pyc
-${PYSITELIB}/jinja2/optimizer.pyo
-${PYSITELIB}/jinja2/parser.py
-${PYSITELIB}/jinja2/parser.pyc
-${PYSITELIB}/jinja2/parser.pyo
-${PYSITELIB}/jinja2/runtime.py
-${PYSITELIB}/jinja2/runtime.pyc
-${PYSITELIB}/jinja2/runtime.pyo
-${PYSITELIB}/jinja2/sandbox.py
-${PYSITELIB}/jinja2/sandbox.pyc
-${PYSITELIB}/jinja2/sandbox.pyo
-${PYSITELIB}/jinja2/tests.py
-${PYSITELIB}/jinja2/tests.pyc
-${PYSITELIB}/jinja2/tests.pyo
-${PYSITELIB}/jinja2/utils.py
-${PYSITELIB}/jinja2/utils.pyc
-${PYSITELIB}/jinja2/utils.pyo
-${PYSITELIB}/jinja2/visitor.py
-${PYSITELIB}/jinja2/visitor.pyc
-${PYSITELIB}/jinja2/visitor.pyo
