@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1 2022/04/19 11:07:18 tnn Exp $
-
-BLAKE2s (Jinja2-2.11.3.tar.gz) = cb131e3479800a849b7be7e5bf5973c144949da9c5b1e0d1b200c190ba190830
-SHA512 (Jinja2-2.11.3.tar.gz) = fce4f835795fe9afb622f8106f60344032a811f3f693806f31ba482f9b7c1400f93dfa1701b4db0b472cbed4b0793cb329778c8091811ef0e3b577150d28e004
-Size (Jinja2-2.11.3.tar.gz) = 257589 bytes
